src/libdrakvuf/libdrakvuf.h

#define NUMBER_OF(x)    (sizeof(x) / sizeof(x[0]))
/*---------------------------------------------------------
 * DRAKVUF functions
 */

// Additional signal number constants for Drakvuf
#define SIGDRAKVUFERROR   -1
#define SIGDRAKVUFTIMEOUT -2
#define SIGDRAKVUFCRASH   -3
typedef enum lookup_type
{
    __INVALID_LOOKUP_TYPE,
    LOOKUP_NONE,
    LOOKUP_DTB,
    LOOKUP_PID,
    LOOKUP_NAME,
    LOOKUP_KERNEL,
} lookup_type_t;
typedef enum addr_type
{
    __INVALID_ADDR_TYPE,
    ADDR_RVA,
    ADDR_VA,
    ADDR_PA,
    ADDR_SYMBOL,
} addr_type_t;
typedef enum trap_type
{
    __INVALID_TRAP_TYPE,
    BREAKPOINT,
    MEMACCESS,
    REGISTER,
    DEBUG,
    CPUID,
    IO,
    CATCHALL_BREAKPOINT
} trap_type_t;
typedef enum memaccess_type
{
    __INVALID_MEMACCESS_TYPE,
    PRE,
    POST
} memaccess_type_t;
typedef enum proc_type
{
    PROC_TYPE_UNKNOWN = 0,
    PROC_TYPE_32      = 32,
    PROC_TYPE_64      = 64,
} proc_type_t;
typedef struct process_data
{
    const char* name;   /* Process name */
    vmi_pid_t pid ;     /* Process pid */
    vmi_pid_t ppid ;    /* Process parent pid */
    addr_t base_addr ;  /* Process base address */
    int64_t userid ;    /* Process SessionID/UID */
    uint32_t tid ;      /* Thread Id for Linux & Windows*/
    proc_type_t bitness;/* Process bitness 32/64 */
} proc_data_t ;
typedef struct drakvuf* drakvuf_t;
struct drakvuf_trap;
typedef struct drakvuf_trap drakvuf_trap_t;
typedef struct drakvuf_trap_info
{
    gint64 timestamp;
    unsigned int vcpu;
    uint16_t altp2m_idx;
    proc_data_t proc_data ; /* Current owning process data */
    proc_data_t attached_proc_data ; /* Current attached process data */
    addr_t trap_pa;
    x86_registers_t* regs;
    drakvuf_trap_t* trap;
    uint64_t event_uid; /* Unique sequential event identifier */
    union
    {
        const cpuid_event_t* cpuid; /* For CPUID traps */
        const debug_event_t* debug; /* For DEBUG traps */
        const reg_event_t*   reg;   /* For MSR traps */
        const io_event_t*    io;    /* For I/O traps */
    };
} drakvuf_trap_info_t;
struct drakvuf_trap
{
    trap_type_t type;
    event_response_t (*cb)(drakvuf_t, drakvuf_trap_info_t*);
    // Force 'drakvuf_is_active_callback' check bo be true.
    // This allows to forcefully execute callback for 'bsodmon' and detect
    // injections faults.
    bool cb_force;
    void* data;

    union
    {
        const char* name; // Only used for informational/debugging purposes
        void* _name;
    };

    union
    {
        struct
        {
            lookup_type_t lookup_type;
            union
            {
                vmi_pid_t pid;
                const char* proc;
                addr_t dtb;
            };

            /* If specified and RVA is used
               RVA will be calculated from the base
               of this module */
            const char* module;

            addr_type_t addr_type;
            union
            {
                addr_t rva;
                addr_t addr;
                const char* symbol;
            };
        } breakpoint;

        struct
        {
            addr_t gfn;
            vmi_mem_access_t access;
            memaccess_type_t type;
        } memaccess;

        struct
        {
            register_t type;
            uint32_t msr;
        } regaccess;
    };

    // How many times trap can be hit in TRAP_TTL_RESET_INTERVAL_SEC interval,
    // before it gets discarded. Protects against api-hammering.
    // 0 for infinity.
    uint64_t ttl;
    time_t last_ttl_rst;
    // Callback invoked when the trap hits api-hammering limit. If not set (NULL),
    // the trap will be simply unhooked (not deleted).
    void(*ah_cb)(drakvuf_t, drakvuf_trap_t*);
};
////////////////////////////////////////////////////////////////////////////

/*---------------------------------------------------------
 * Reading in Rekall profile informations
 */

typedef struct symbol
{
    char* name;
    addr_t rva;
    uint8_t type;
    int inputs;
} __attribute__ ((packed)) symbol_t;
typedef struct symbols
{
    const char* name;
    symbol_t* symbols; // array of size count
    uint64_t count;
} symbols_t;
typedef void (*event_cb_t) (int fd, void* data);
typedef struct _mmvad_info
{
    uint64_t starting_vpn;
    uint64_t ending_vpn;
    uint64_t flags;
    uint64_t flags1;

    /* Pointer to the file name, if this MMVAD is backed by some file on disk.
     * If not null, read with: drakvuf_read_unicode_va(drakvuf, mmvad->file_name_ptr, 0) */
    addr_t file_name_ptr;
    uint32_t total_number_of_ptes;
    addr_t prototype_pte;
    addr_t node_addr;
} mmvad_info_t;
typedef struct _module_info
{
    addr_t eprocess_addr ;        /* EPROCESS to which the module is currently loaded           */
    addr_t dtb ;                  /* DTB for the process where the module is currently loaded   */
    vmi_pid_t pid ;               /* PID of the process where the module is currently is loaded */
    addr_t base_addr ;            /* Module base address                                        */
    addr_t size ;                 /* Size of Image                                              */
    unicode_string_t* full_name ; /* Module full name                                           */
    unicode_string_t* base_name ; /* Module base name                                           */
    bool is_wow ;                 /* Is WoW64 module?                                           */
    bool is_wow_process ;         /* Is WoW64 process?                                          */
} module_info_t ;
bool drakvuf_set_vcpu_gprs(drakvuf_t drakvuf, unsigned int vcpu, registers_t* regs) NOEXCEPT;
/*---------------------------------------------------------
 * Event FD functions
 */

int drakvuf_event_fd_add(drakvuf_t drakvuf,
    int fd,
    event_cb_t event_cb,
    void* data) NOEXCEPT;
int drakvuf_event_fd_remove(drakvuf_t drakvuf,
    int fd) NOEXCEPT;
/*---------------------------------------------------------
 * Output helpers
 */

typedef enum
{
    OUTPUT_DEFAULT,
    OUTPUT_CSV,
    OUTPUT_KV,
    OUTPUT_JSON,
} output_format_t;