src/librepl/libdrakvuf.py


# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 607
if _libs["repl"].has("drakvuf_set_vcpu_gprs", "cdecl"):
    drakvuf_set_vcpu_gprs = _libs["repl"].get("drakvuf_set_vcpu_gprs", "cdecl")
    drakvuf_set_vcpu_gprs.argtypes = [drakvuf_t, c_int, POINTER(registers_t)]
    drakvuf_set_vcpu_gprs.restype = c_bool

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 613
if _libs["repl"].has("drakvuf_event_fd_add", "cdecl"):
    drakvuf_event_fd_add = _libs["repl"].get("drakvuf_event_fd_add", "cdecl")
    drakvuf_event_fd_add.argtypes = [drakvuf_t, c_int, event_cb_t, POINTER(None)]
    drakvuf_event_fd_add.restype = c_int

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 618
if _libs["repl"].has("drakvuf_event_fd_remove", "cdecl"):
    drakvuf_event_fd_remove = _libs["repl"].get("drakvuf_event_fd_remove", "cdecl")
    drakvuf_event_fd_remove.argtypes = [drakvuf_t, c_int]
    drakvuf_event_fd_remove.restype = c_int

enum_anon_166 = c_int# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 631

OUTPUT_DEFAULT = 0# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 631

OUTPUT_CSV = (OUTPUT_DEFAULT + 1)# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 631

OUTPUT_KV = (OUTPUT_CSV + 1)# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 631

OUTPUT_JSON = (OUTPUT_KV + 1)# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 631

output_format_t = enum_anon_166# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 631

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 126
def NUMBER_OF(x):
    return (sizeof(x) / sizeof((x [0])))

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 133
try:
    SIGDRAKVUFERROR = (-1)
except:
    pass

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 134
try:
    SIGDRAKVUFTIMEOUT = (-2)
except:
    pass

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 135
try:
    SIGDRAKVUFCRASH = (-3)
except:
    pass

process_data = struct_process_data# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 179

drakvuf = struct_drakvuf# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 181

drakvuf_trap = struct_drakvuf_trap# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 202

drakvuf_trap_info = struct_drakvuf_trap_info# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 200

symbol = struct_symbol# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 288

symbols = struct_symbols# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 295

_mmvad_info = struct__mmvad_info# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 454

_module_info = struct__module_info# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 515

# No inserted files

# No prefix-stripping

